<resources>
    <string name="app_name">Phrasebook</string>
    <string name="title_activity_main">Phrasebook</string>
    <string name="title_activity_new_user">New User</string>
    <string name="tab1">Practice</string>
    <string name="tab2">Phrasebook</string>
    <string name="tab3">Progress</string>
    <string name="translate_this_in">Translate this in:</string>
    <string name="basic_information">Hello, let\'s start with some basic information:</string>
    <string name="insert_nickname">Insert your nickname…</string>
    <string name="mother_language">Your mother language…</string>
    <string name="foreign_language">Language you are learning…</string>
    <string name="create_user">Create User</string>
    <string name="check">Check</string>
    <string name="next_challenge">Next</string>
    <string name="type_the_translation">Type the translation…</string>
    <string name="title_activity_new_phrase">New Phrase</string>
    <string name="add_new_phrase">Add a new word, phrase or common expression to your phrasebook
        of:</string>
    <string name="type_the_phrase_in_your_mother_language">Type the phrase in your mother language…</string>
    <string name="type_the_phrase_in_the_foreign_language">Type the phrase in the foreign language…</string>
    <string name="save_and_close">Save and Close</string>
    <string name="empty_database_text">Your phrasebook is currently empty!\nStart adding something by pressing the \'+\' button below!</string>
    <string name="search_hint">Search in phrasebook…</string>
    <string name="experience_points">Experience Points</string>
    <string name="uiSwitchRootMessage">As a main purpose of this experiment, the layout of the
        application has changed: </string>
    <string name="uiSwitchGamification">Gamification has been introduced! A whole new layout is now available, check out the top-right menu button in the home screen!</string>
    <string name="uiSwitchNoGamification">Gamification has been removed. No more experience points, no more levels, no more badges.</string>
    <string name="uiSwitchErrorConnection">An automatic data upload has been requested at this point of your experience with the app. You don\'t have to do anything but just be sure you\'re connected to a network and re-launch the app.</string>
    <string name="finalMessage">The final data upload has been performed. The evaluation period has terminated and we (the developers) won\'t collect any more data about your app usage. Thank you for your contribution! If you wish to use again the app with the all the available features, please remember to fill out the final survey and check the relative question!</string>
    <string name="about_phrasebook">About Phrasebook</string>
    <string name="about_phrasebook_text">Version 2.1\nPhrasebook is the result of what has started
        as part of a research experiment within a University course held at Technical University
        of Denmark (DTU), and has been further developed to become stable and user-friendly.\nIn
        this version, it\'s now possible to create multiple Phrasebooks, each one independent from
        the other; very useful to people who\'d like to improve several languages.\nThe
        User Interface has been redesigned to comply with the latest Android Material Design
        guidelines.\nFurthermore, a lot of different bugs have been fixed, which makes the app now
        more stable and improves the general navigation flow.\nPlease address any questions or
        inquiries to the developers and feel free and very welcome to contact them, since the app
        is still under development and they would feel really excited to know feedback from the
        users.
        .</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="my_phrasebooks">My Phrasebooks</string>
    <string name="nav_header_subtitle">Change Phrasebook</string>
    <string name="title_new_phrasebook_activity">New Phrasebook</string>
    <string name="text_new_phrasebook">Here you can create a new Phrasebook: just choose the language you want to use as mother language, and the language you want to improve in the related text fields.</string>
    <string name="new_phrasebook_lang1">Type here your mother language…</string>
    <string name="new_phrasebook_lang2">Type here the new foreign language…</string>
    <string name="create_phrasebook_button">Create Phrasebook</string>
    <string name="current_language_profile">Current Language:</string>
    <string name="edit_phrase_activity_text">Do you want to update/correct/delete this phrase/word in your phrasebook?</string>
    <string name="edit_phrasebook_mother_language">Mother Language:</string>
    <string name="edit_phrasebook_foreign_language">Foreign Language:</string>
    <string name="main_menu_profile">Profile</string>
    <string name="main_menu_edit_phrasebook">Edit Phrasebook</string>
    <string name="main_menu_export_data">Export Data</string>
    <string name="main_menu_import_data">Import Data</string>
    <string name="main_menu_delete_data">Delete Data</string>
    <string name="main_menu_reset_xp">Reset XP</string>
    <string name="main_menu_about">About</string>
    <string name="save_and_add_more">Save and add more</string>
</resources>
