<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bobbytables.phrasebook.NewUserActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/basic_information"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/nicknameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@id/hello"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:ems="12"
        android:hint="@string/insert_nickname"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/lang1Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nicknameText"
        android:layout_centerHorizontal="true"
        android:ems="12"
        android:hint="@string/mother_language"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/lang2Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lang1Value"
        android:layout_centerHorizontal="true"
        android:ems="12"
        android:hint="@string/foreign_language"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"/>

    <Button
        android:id="@+id/createUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lang2Value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="createUser"
        android:text="@string/create_user"
        style="@style/Widget.AppCompat.Button.Colored"/>


</RelativeLayout>
