<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_phrase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bobbytables.phrasebook.NewPhraseActivity">

    <TextView
        android:id="@+id/add_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_new_phrase"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView_new_phrase_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/add_new_mother_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_new_phrase_language"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/type_the_phrase_in_your_mother_language"
        android:inputType="textMultiLine"
        android:maxLength="50"
        android:maxLines="3"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/add_new_foreign_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_mother_lang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/type_the_phrase_in_the_foreign_language"
        android:inputType="textMultiLine"
        android:maxLength="50"
        android:maxLines="3"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/save_and_add_more"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_foreign_lang"
        android:layout_centerHorizontal="true"
        android:text="@string/save_and_add_more"
        android:layout_marginTop="5dp"/>
</RelativeLayout>
