<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:htext="http://schemas.android.com/apk/res-auto"
    android:id="@+id/challengeCardView"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="5dp"
    android:animateLayoutChanges="true"
    card_view:cardBackgroundColor="@color/primary_light"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/translate_this"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/translate_this_in"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/challenge_card_lang2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/translate_this"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/challenge_card_lang1_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/translate_this"
            android:layout_marginTop="10dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/challenge_card_lang1_phrase"
            android:layout_marginTop="10dp"
            android:hint="@string/type_the_translation"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:padding="3dp"
            android:textSize="24sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/translation"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/correctTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/translation"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:textColor="@color/wrongAnswer"
            android:textSize="24sp"
            android:visibility="invisible"/>

        <com.hanks.htextview.HTextView
            android:id="@+id/newLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/correctTranslation"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/checkTranslation"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_done_white_24dp"
            android:text="@string/check"/>

        <com.hanks.htextview.HTextView
            android:id="@+id/xpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/checkTranslation"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/nextChallenge"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_arrow_forward_white_24dp"
            android:text="@string/next_challenge"
            android:visibility="invisible"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>